--- a/Calculator/index.css
+++ b/Calculator/index.css
@@ -1,5 +1,59 @@
-* { box-sizing: border-box; padding: 0; margin: 0; }
+/* *{ box-sizing: border-box; padding: 0; margin: 0; } */
+
+body {
+    text-align: center;
+    background: rgb(193,0,138);
+    background: radial-gradient(circle, 
+    rgba(193,0,138,1) 40%,rgba(4,200,232,1) 70%, rgba(55,136,232,1) 90%);
+    min-height: 100vh;
+}
 .container{
+    border: solid;;
+    display:flex;
+    align-items: center;
+    min-height: 100vh;
+    justify-content: center;
+    
+}
+
+.calculator{
+    flex-direction: column;
     display: flex;
-    border: 2px;
+    align-items: center;
+    justify-content: center;
+    border: solid; 
+    background-color: aquamarine;
+    border:solid;  
+    width: 200px;
+    height: 200px;
+}
+
+.screen{
+    display:flex;
+    border: 1px solid;
+    background-color: whitesmoke;
+    padding: 5px;
+    justify-content: right;
+    align-items: end;
+    width: 110px;
+    height: 150px;
+}
+
+.calc-button-row{
+    background-color: rgb(6, 190, 83);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 30px;
+    
+}
+
+.calc-buttons{
+    font-size: 20px;
+    justify-content: space-between;
+    margin: 0;
+    border: 1px solid;
+    cursor: pointer;
+    justify-content: space-between;
 }
