--- a/Hello World/index.css
+++ b/Hello World/index.css
@@ -6,5 +6,4 @@
     align-items: center;
     width: 100%;
     min-height: 100vh;
-    background-color: aquamarine;
-}
+    background: linear-gradient( 140deg, aquamarine, blue, rgb(199, 3, 199) )}
